output.log
.\src\main.c: In function 'main':
.\src\main.c:88:17: error: a label can only be part of a statement and a declaration is not a statement
                 int c;
                 ^~~
.\src\main.c: In function 'main':
.\src\main.c:88:17: error: a label can only be part of a statement and a declaration is not a statement
                 int cod;
                 ^~~
.\src\main.c: In function 'main':
.\src\main.c:88:17: error: a label can only be part of a statement and a declaration is not a statement
                 int cod;
                 ^~~
.\src\main.c: In function 'main':
.\src\main.c:88:17: error: a label can only be part of a statement and a declaration is not a statement
                 int cod;
                 ^~~
.\src\main.c: In function 'main':
.\src\main.c:88:17: error: a label can only be part of a statement and a declaration is not a statement
                 int cod;
                 ^~~
.\src\main.c:94:52: warning: passing argument 1 of 'buscarFuncionario_binariamente' makes integer from pointer without a cast [-Wint-conversion]
                 f = buscarFuncionario_binariamente(&cod, arq, tamanho_arquivo(arq), log);
                                                    ^
In file included from .\src\main.c:1:0:
.\src\estruturas.h:122:8: note: expected 'int' but argument is of type 'int *'
 TFunc *buscarFuncionario_binariamente(int chave, FILE *arquivo, int tam, FILE *LogFileBinary);
        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file main.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
